# advent

./: .gitignore  README.md  prep.py  pyproject.toml  requirements.txt
2016/01/: easterbunny.py
2016/02/: bathroom.py  bathroom2.py
2016/03/: impossibletriangles.py  impossibletriangles2.py
2016/04/: realrooms.py  realrooms2.py
2016/05/: doorpass.py  doorpass2.py
2016/06/: repetitioncode.py  repetitioncode2.py
2016/07/: tls.py  tls2.py
2016/08/: tfa.py  tfa2.py
2016/09/: compress.py  compress2.py
2016/10/: bots.py  bots2.py
2016/11/: rtg.py  rtg_firstattempt.py
2016/12/: bootmonorail.py
2016/13/: path.py  path2.py
2016/14/: onetimepad.py
2016/15/: timing.py
2016/16/: dragon.py
2016/17/: accessvault.py  accessvault2.py
2016/18/: Untitled.ipynb  traps.py
2016/19/: oppositeelves.py  presentelves.py
2016/20/: blockedips.py
2016/21/: Untitled.ipynb  scramble.py  unscramble.py
2016/22/: Part2.ipynb  validnodes.py
2016/23/: bootmonorail.py
2016/24/: robots.py  robots2.py
2016/25/: signal.py
2017/01/: captcha.py
2017/02/: Corruption Checksum.ipynb
2017/03/: Spiral Memory.ipynb
2017/04/: High-Entropy Passphrases.ipynb
2017/05/: A Maze of Twisty Trampolines, All Alike.ipynb  Day05.py
2017/06/: Memory Reallocation.ipynb
2017/07/: Recursive Circus.ipynb
2017/08/: I Heard You Like Registers.ipynb
2017/09/: Stream Processing.ipynb
2017/10/: Knot Hash.ipynb  knot_hash.py
2017/11/: Hex Ed.ipynb
2017/12/: Digital Plumber.ipynb
2017/13/: Packet Scanners.ipynb  packet_scanners.py
2017/20/: input.csv  (+1 more)
2019/: README.md
(+256 files in other folders)
