[project]
name = "advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "notebook>=7.2.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyrsistent>=0.20.0",
    "sympy>=1.13.3",
]
