[project]
name = "advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "notebook>=7.2.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "parse>=1.20.2",
    "parsy>=2.1",
    "pyrsistent>=0.20.0",
    "pyvis>=0.3.2",
    "sympy>=1.13.3",
    "tqdm>=4.67.1",
]
